# DJ-VJ

./: .gitignore  Pipfile  README.md  audio_in.py  create_screen_behavior.py  index.html  main.py  main.spec  requirements.txt  setup.py  showTest.py  test_freq_to_note.py  unittesting.py
.github/: README.md  pull_request_template.md
Visual/: README.md
Visual/image effects/: CMakeLists.txt  ContractBrightness.cpp
Visual/image transition/: imagechange.py
djvj/: Averager.py  Bugger.py  ImagePlay.py  ThreadingTest.py  Visual.py  audio_listener.py  chords.pyx  djvj-GUI.py  djvj_GUI.py  edit_show.py  gui.py  gui_moments.py  imagechange.py  interpreter.py  moment.py  pitch.py  pitchAverager.py  show.py  tempo.py  testAverages.py  testVideo.py  testVisuals.py  testVisuals2.py  unittesting.py  video_player.py  visual.py
djvj/chord_detection/: ChordDetectorc.cpp  Chromagramc.cpp  chord_detection.cpp  chord_detection.pyx  chromagram.cpp  chromagram.pyx
docs/: about-us.html  about_djvj.html  demo.html  index.html  video.html
docs/css/: stylesheet.css
gui/: README.md  djvj-GUI.py
m3_pitch/: pitch.py
pitch/: .gitignore  README.md  pitch.py
test/: Averages_Test.py  ThreadingTest.py  bugtest.py  create_screen_behavior.py  test.djvj  testVisuals.py  test_freq_to_note.py  test_interpreter.py  test_interpreter_basic_pitch.py  test_interpreter_basic_tempo.py  test_interpreter_two_moments_two_rules.py  unittestAverages.py  unittesting.py
test/test_assets/: bad file path.djvj  full_show.djvj.djvj  (+2 more)
testing_folder/: pickle_unittest.py
videoplay/: ImagePlay.py  README.md
(+156 files in other folders)
